Поработали над api спекой и немного изменили серверное api  по работе с группами
